feat: User Registration
